# egui-dialogs_fork

./: Cargo.toml
src/: dialogs.rs  standard_dialog.rs
