[package]
name = "egui_dialogs"
version = "0.3.8"
edition = "2024"
description = "Platform-agnostic, customizable dialogs for egui library."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/a-littlebit/egui_dialogs"
repository = "https://github.com/vanleefox/egui-dialogs_fork"
readme = "README.md"

[dependencies]
egui = "0.34.1"
sys-locale = "0.3.2"

[dev-dependencies]
egui_extras = { version = "0.34.1", features = ["all_loaders"] }
eframe = "0.34.1"
